--- a/blog/templates/articulo.html
+++ b/blog/templates/articulo.html
@@ -12,11 +12,52 @@
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
 
+    <!-- SEO: Canonical URL -->
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/blog/$if(slug)$$slug$$endif$.html">
+
     <!-- Open Graph -->
     <meta property="og:title" content="$title$ | Víctor Gutiérrez Marcos">
     <meta property="og:description" content="$if(subtitle)$$subtitle$$endif$">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://www.victorgutierrezmarcos.es/blog/$if(slug)$$slug$$endif$.html">
+    <meta property="og:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:site_name" content="Víctor Gutiérrez Marcos">
+    <meta property="article:author" content="$author$">
+    $if(date)$<meta property="article:published_time" content="$date$">$endif$
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="$title$ | Víctor Gutiérrez Marcos">
+    <meta name="twitter:description" content="$if(subtitle)$$subtitle$$endif$">
+    <meta name="twitter:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
+
+    <!-- SEO: Datos estructurados Schema.org - BlogPosting -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "$title$",
+        "description": "$if(subtitle)$$subtitle$$endif$",
+        "author": {
+            "@type": "Person",
+            "name": "$author$",
+            "url": "https://www.victorgutierrezmarcos.es/sobre-mi.html"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Víctor Gutiérrez Marcos",
+            "url": "https://www.victorgutierrezmarcos.es"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://www.victorgutierrezmarcos.es/blog/$if(slug)$$slug$$endif$.html"
+        },
+        $if(date)$"datePublished": "$date$",$endif$
+        $if(updated)$"dateModified": "$updated$",$endif$
+        "inLanguage": "$lang$"
+    }
+    </script>
 
     $for(css)$
     <link rel="stylesheet" href="$css$">
