--- a/blog/templates/articulo.html
+++ b/blog/templates/articulo.html
@@ -169,5 +169,14 @@ $include-after$
 $endfor$
 <!-- Script de consentimiento de cookies -->
 <script src="../cookie-consent.js"></script>
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
+    <!-- Configuración y Lógica de Auth -->
+    <script src="../../firebase-config.js"></script>
+    <script src="../../auth.js"></script>
 </body>
 </html>
