--- a/blog/templates/articulo.html
+++ b/blog/templates/articulo.html
@@ -78,7 +78,7 @@
 
     <!-- Cabecera institucional -->
     <header class="article-header-bar">
-        <div class="site-brand">
+        <a href="index.html" class="site-brand">
             <svg class="site-logo" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                 <rect width="32" height="32" rx="4" fill="#5F2987"/>
                 <text x="16" y="22" font-family="Palatino Linotype, Palatino, Georgia, serif" font-size="14" font-weight="600" fill="#E2EFD9" text-anchor="middle">VGM</text>
@@ -87,10 +87,10 @@
                 <div class="site-name">Víctor Gutiérrez Marcos</div>
                 <div class="site-tagline">Análisis Económico y Comercial</div>
             </div>
-        </div>
-        <div class="header-contact">
+        </a>
+        <a href="index.html" class="header-contact">
             www.victorgutierrezmarcos.es
-        </div>
+        </a>
     </header>
 
     <!-- Barra de tipo de documento -->
@@ -216,13 +216,13 @@
 
     <!-- Pie de artículo -->
     <footer class="article-footer">
-        <p class="copyright">
+        <a href="index.html" class="copyright">
             <svg class="footer-favicon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                 <rect width="32" height="32" rx="4" fill="#5F2987"/>
                 <text x="16" y="22" font-family="Palatino Linotype, Palatino, Georgia, serif" font-size="14" font-weight="600" fill="#E2EFD9" text-anchor="middle">VGM</text>
             </svg>
             &copy; $if(year)$$year$$else$2026$endif$ Víctor Gutiérrez Marcos
-        </p>
+        </a>
         <div class="footer-links">
             <a href="../politica-cookies.html">🍪 Política de cookies</a>
         </div>
